<resources>
    <string name="app_name">University Payroll</string>
    <string name="login_screen_title">Unified Authentication System</string>
    <string name="copyright">©2022 Mahdi PS. All rights reserved.</string>
    <string name="contact">For further information, call us here:\nPhone:+970598380542.</string>
    <string name="add_new_employee">Add new Employee</string>
    <string name="pay_forAll">Pay For All</string>
    <string name="contract">Contract</string>
    <string name="set_the_new_employee_contract_here_n_welcome">Set The new Employee Contract here:\n Welcome!!</string>
    <string name="update_the_current_employee_contract_here_n_welcome">Update The current Employee Contract here:\n Welcome!!</string>
    <string name="edit_contract">Edit Contract</string>
    <string name="details">Details</string>
    <string name="pay">Pay</string>
    <string name="all_employee_details_here_n_welcome">All Employee details here:\n Welcome!</string>
    <string name="search">Search By name,id and contract type</string>
    <string name="notifications">Notifications</string>
    <string name="send_private_or_public_notification">Send private or public notification</string>
    <string name="content_goes_here">content goes here</string>
    <string name="sender">sender</string>
    <string name="receiver">receiver</string>
    <string name="title_goes_here">title goes here</string>
    <string name="type_here">Type here...</string>
    <string name="massage_form">Massage Form</string>
    <string name="send">Send</string>
    <string name="statistics">Statistics</string>
    <string name="payment_form">Payment Form</string>
    <string name="check_form">Check Form</string>
    <string name="full_name">Full name</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="title">Title</string>
    <string-array name="contract_type_array">
        <item>Contract type…</item>
        <item>Full-Time</item>
        <item>Part-Time</item>
    </string-array>

    <string-array name="fixed_price_array">
        <item>Salary…</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
    </string-array>

    <string-array name="hourly_rate_array">
        <item>Hourly rate…</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </string-array>

    <string-array name="payment_method_array">
        <item>Payment method…</item>
        <item>Check</item>
        <item>Bank transfer</item>
        <item>Salary form</item>
    </string-array>

    <string-array name="holidays_array">
        <item>Accepted holidays…</item>
        <item>12</item>
        <item>6</item>
    </string-array>
</resources>