<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_card"
        android:layout_centerHorizontal="true"
        android:text="Welcome"
        android:textColor="@color/secondaryColor"
        android:textSize="35sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="25dp"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/secondaryColor"
            android:orientation="vertical"
            android:padding="25dp">
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/enter"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    app:tint="@color/thirdColor" />
                <TextView
                    android:id="@+id/login_main_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textColor="@color/thirdColor"
                    android:text="@string/login_screen_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:textSize="14sp"
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:drawableTint="@color/mainColor"
                android:drawableLeft="@drawable/ic_username"
                android:inputType="textAutoCorrect" />
            <EditText
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="15dp"
                android:textSize="14sp"
                android:id="@+id/psw"
                android:drawableTint="@color/mainColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="Password"
                android:drawableLeft="@drawable/ic_psw"
                android:inputType="textPassword" />
            <Button
                android:layout_marginTop="30dp"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:text="Login"
                android:backgroundTint="@color/mainColor"
                android:id="@+id/btn_login"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_marginTop="15dp"
                android:id="@+id/copyrights"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/main_icon"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:layout_gravity="center"
                    android:text="@string/copyright"
                    android:textStyle="italic"
                    android:textSize="11sp"
                    android:layout_weight="1.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="?actionBarSize"
        android:gravity="center"
        android:text="@string/contact"
        android:textColor="@color/secondaryColor"
        android:textSize="12sp" />

</RelativeLayout>